[project]
name = "situation"
version = "0.20.0"
description = "IT data collection infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-shadcn>=0.9.7",
    "pre-commit>=4.5.1",
    "sqlacodegen>=4.0.0",
    "psycopg2>=2.9.11",
]

[tool.uv.workspace]
members = ["dev/ja4", "sdk/sqlmodel"]
